Edited README via GitHub

--- a/README
+++ b/README
@@ -1,15 +1,32 @@
 <HTML>
 <Head>
-	<body bgcolor ="pink">  
+	<body bgcolor ="black">  
 
-<p style="font-size:50;color:aqua"><BR><BR><U><B>My new roles, new routines, new relationships and  new assumption</B></U>
-<p color:"yellow"><B>GD1T<B> 
+<font face="viner hand itc"><p style="font-size:50;color:yellow"><BR><BR><U><B>My new roles, new routines, new relationships and  new assumption</B></U></font>
+
 </Head>
 <Body>
 
-<br><font face="jiggery pokery" size="+3" color="blue".> Being a college freshman entails a lot of adjustments. Fresh from high school, we are now entering the world of challenges deeper goals, thus bigger responsibilities. Let me, one by one, tackle the new phase of college life..</font>
+<br><font face="jiggery pokery" size="6" color="purple".> Being a college freshman entails a lot of adjustments. Fresh from high school, we are now entering the world of challenges deeper goals, thus bigger responsibilities. Let me, one by one, tackle the new phase of college life..</font>
 
-<br><font face="jiggery pokery" size="+5" color="aqua">NEW ROLES</font>
 <br>
+<br><font color="red">*</font> <font face="jiggery pokery" size="+5" color="aqua">NEW ROLES</font>
+<br><font size="6" color="dark pink" face="forte"> As a began to acknowledge the fact that I am no longer a high school student, I felt a bit nervous and at the same time excited. Though I am aware that I am now facing new roles as a student of Game Design Development, it also makes me feel challenged. My new roles as a <b>Game Design Development</b> are to make sure that I will be more serious about education and be a responsible and conscientious student.</font>
+<br>
+<br><font color="red">*</font> <font face="jiggery pokery" size="+5" color="aqua">NEW ROUTINES</font>
+<br><font size="6" color="dark pink" face="forte">As I grow up the ladder, my routines also change a vast change. My current daily routine is very much different when I was in high school.  Obviously, schedules count. Preparation in going to school every single day marks another new routine.</font>
+<br>
+<br><font color="red">*</font> <font face="jiggery pokery" size="+5" color="aqua">NEW RELATIONSHIPS</font>
+<br><font size="6" color="yellow" face="forte">The very reason why I chose this course is primarily because of my passion and interest in the I.T world. This year marks a new relationship with Game Design Development. As a Game Design Development student, I am committed to reinforce the relationship I have with this course by bringing out the best in me. And similar with any other relationship, it is my goal to keep it fruitful and memorable.</font>
+<br>
+<br><font color="red">*</font> <font face="jiggery pokery" size="+5" color="aqua">NEW ASSUMPTION</font>
+<br><font size="6" color="yellow" face="forte">Along with the new roles that I am currently facing are new assumptions. As a Game Design Development student, I must admit I have a lot of expectations and new assumptions about this course. First, I assume that this is going to be very exciting and full of learning since this is my interest. Second, is that I will get the best education and learning experience being taught the La Salle-CSB way. Third, I assume that four years from now, I will come out as a fully-fledged Game Design Developer and ready to fight the battle in the corporate world. </font>
+<br>
+<br>
+<br>
+
+
+<br><font color="purple" size="12"> -ISSA ASISTIO-
+<br>-GD1T-</font>
 
 </Html>
